--- a/NuEvtReco-Ch4/NuEvtReco.tex
+++ b/NuEvtReco-Ch4/NuEvtReco.tex
@@ -199,14 +199,14 @@ d$E$/d$x$ information at different distances from the shower start-point for $e$
  
  \par For EM showers, the calorimetric energy reconstruction response has a significant non-Gaussian component, as well as a large bias. Both effects are attributable to reconstruction effects associated with under-clustering of charge. The energy bias is found to be 20\% and approximately flat in energy, and motivates a definition of a corrected shower energy, defined as $E_{\rm corrected} = E_{\rm calorimetry} / 0.8$. The non-Gaussian response for EM energy reconstruction can be modeled through a Gaussian plus one-sided exponential distribution. Figure~\ref{fig:eres:elec:binned} shows in different bins of true energy the fractional energy response and a fit to a Gaussian plus one-sided exponential function. The residual energy bias, after the 20\% correction applied, is of order $3-8$\%. 
  
- \begin{figure}[ht]
+\begin{figure}[ht]
 \begin{center}
 \includegraphics[width=0.75\textwidth]{ereco/elec_eres_binned.pdf}
 \caption{\label{fig:eres:elec:binned}Energy resolution for electron showers.}
 \end{center}
 \end{figure}
  
-\newpage
+\clearpage
 
 \begin{figure}[H] 
 \begin{center}
