--- a/main.tex
+++ b/main.tex
@@ -1203,10 +1203,8 @@ BDT-based \npsel & 10.7 & N.A. & N.A. & N.A. \\
     \caption{statistical and systematics sensitivity estimate for 1eNp truth level selection with the $\nu_{\mu} constraint$}
     \end{subfigure}
     \caption{The sensitivity estimate for the 1eNp truth level selection for statistical only estimate and the statistical+systematics estimate.}.
-    }
     \label{fig:sensitivity_numuconst}
-    \caption{Truth-level sensitivity estimate comparisons for the 1eNp selection before constraint is included. It has been observed that there is less constraint power on the sensitivity estimate when we include the MC statistical errors ($\sqrt{N_{bin}}$)} as opposed to what is shown on Fig.~\ref{fig:numuconstraintresult}. We have also studied the kinematic topology for the selection and observed that when we select more hadrons in the final state of interaction, there is less correlation that we can exploit between the two channels. This leads to similar sensitivity estimates before and after applying the $$\nu_\mu$ constraint.
-    }
+    \caption{Truth-level sensitivity estimate comparisons for the 1eNp selection before constraint is included. It has been observed that there is less constraint power on the sensitivity estimate when we include the MC statistical errors ($\sqrt{N_{bin}}$) as opposed to what is shown on Fig.~\ref{fig:numuconstraintresult}. We have also studied the kinematic topology for the selection and observed that when we select more hadrons in the final state of interaction, there is less correlation that we can exploit between the two channels. This leads to similar sensitivity estimates before and after applying the $\nu_\mu$ constraint.}
     \end{center}
 \end{figure}
 
