--- a/main.tex
+++ b/main.tex
@@ -1277,9 +1277,8 @@ The distribution of the test statistic for the null and alternative hypothesis d
 
 
 \newpage
-\section{Conclusions and Outlook}
-
-\subsection{Remaining Steps in the Analysis}
+\section{Outlook: Remaining Steps in the Analysis}
+%\subsection{Remaining Steps in the Analysis}
 \par There are several known remaining steps to be completed by the analysis. We list them below, trying to give a timeline for each. 
 \begin{enumerate}
     \item \textbf{MC Statistics} Larger MC statistics for specific background categories are needed to be able to better train the \npsel BDT as well as obtain a more accurate estimation of expected backgrounds from different background neutrino categories. Initial samples for specific background categories have been generated (with $\times2-8$ the stats from the default BNB simulation, depending on the sample). It is expected that these will be included in the analysis by the Feb. 2020 collaboration meeting. %\textcolor{green}{Giuseppe}
